index.css
body {
	margin: 0;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
}

.x-axis path,
.y-axis path {
	display: none;
}

.rank-line {
	fill: none;
	stroke: black;
	stroke-linejoin: round;
	stroke-linecap: round;
}

.start-dot,
.end-dot {
	fill: grey;
}

.tooltip text {
	font-size: 14px;
	font-weight: 700;
	fill: black;
}

.x-axis text {
	font-size: 20px;
	font-weight: 700;
}

.y-axis text {
	font-weight: 700;
}

text {
	text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
	font-family: 'Open Sans', sans-serif;
	opacity: 0.7;
	font-size: 14px;
}

.y-label {
	fill: black;
	font-size: 18px;
	font-weight: 700;
}

.voronoi path {
	fill: none;
	pointer-events: all;
}

.grid-line {
	stroke: black;
	opacity: 0.2;
	stroke-dasharray: 2, 2;
}

.end-label {
	font-size: 14px;
	font-weight: 700;
	fill: black;
	fill-opacity: 0.7;
}

#chart-container {
	width: 100%;
	height: 100%;
}

polyline {
	opacity: 0.3;
	stroke: black;
	stroke-width: 2px;
	fill: none;
}

.labelValue {
	font-size: 60%;
	opacity: 0.5;
}

.toolTip {
	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
	position: absolute;
	display: none;
	width: auto;
	height: auto;
	background: none repeat scroll 0 0 white;
	border: 0 none;
	border-radius: 8px 8px 8px 8px;
	box-shadow: -3px 3px 15px #888888;
	color: black;
	font: 12px sans-serif;
	padding: 5px;
	text-align: center;
}

.axis path,
.axis line {
	fill: none;
	stroke: #000;
	shape-rendering: crispEdges;
}

.x.axis path {
	display: none;
}

.container {
	padding-top: 25px;
}

#chart-instructions {
	text-align: right;
	padding-top: 5px;
}

#chart-title {
	text-align: center;
}

#chart-title p {
	margin-bottom: 0;
}

#dog-card {
	position: fixed;
	width: 25vw;
	/* height: 10vh; */
	left: 0;
	bottom: 50vh;
	padding-top: 5px;
	box-shadow: 0 -5px 15px lightgray;
	transform: translateX(-24vw);
	transition: transform 0.5s;
	transition-delay: 0.15s;
	border-top: 1px dashed black;
	background-color: #0d6efd;
	color: white;
}

#dog-card:hover {
	transition: transform 0.5s;
	transform: translateX(0vw);
}

#doggy-details a {
	color: white;
}

#doggy-details a:hover {
	color: black;
}

#elips {
	position: absolute;
	right: 0.25vw;
}

